# flamejam

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  apache-vhost.conf  app.py  dev-requirements.txt  docker-compose.yml  fabfile.py  flamejam.cfg.default  flamejam.cfg.example  flamejam.py  flamejam.wsgi  flamejam.wsgi.example  kill-database.py  pyproject.toml  recaptcha.cfg  requirements.txt  run.sh  runserver.py  setup.cfg  setup.py  setup.sh  uwsgi_dev.ini  uwsgi_prod.ini
alembic/: env.py
deploy/: uwsgi.ini
doc/: apache-vhost.conf  flamejam.cfg.default  flamejam.cron.d
flamejam/: LICENSE  __init__.py  cli.py  filters.py  flask_errormail.py  forms.py  kill-database.py  login.py  mail.py  menu.py  models.py  tick.py  utils.py  views.py
flamejam/models/: __init__.py  announcement.py  comment.py  devlogpost.py  game.py  gamepackage.py  gamescreenshot.py  invitation.py  jam.py  participation.py  rating.py  registration.py  team.py  user.py
flamejam/static/: admin.css  countdown.js  jquery.lightbox-0.5.js  main.js  style.css
flamejam/templates/: _formhelpers.html  add_package.html  add_screenshot.html  announcements.html  base.html  contact.html  countdown.html  delete_jam.html  edit_entry.html  edit_jam_theme.html  error.html  faq.html  faq_packaging.html  footer.html  index.html  jams.html  links.html  login.html  (+16 more)
scripts/: init-db.py  seed-db.py
templates/: _formhelpers.html  base.html  contact.html  home.html  index.html  login.html  new_jam.html  register.html  show_entry.html  show_jam.html  show_participant.html
tmp/: .gitignore
(+111 files in other folders)
