[tool.poetry]
name = "flamejam"
version = "1.0.0"
description = "A game jam application using Flask"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "zlib"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
flask-mail = "^0.9.1"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.14.2"
flask-login = "^0.4.1"
flask-markdown = "^0.3.0"
python-dateutil = "^2.8"
uwsgi = "^2.0"
scrypt = "^0.8.13"
requests = "^2.22"
alembic = "^1.3"
flask-principal = "^0.4.0"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
flask-migrate = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
